--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,14 @@ jobs:
   build:
     docker:
       - image: circleci/node:7.10
+      environment:
+        WP_API_ENDPOINT: $WP_API_ENDPOINT
+        ACF_API_ENDPOINT: $ACF_API_ENDPOINT
+        CONTACT_ENDPOINT: $CONTACT_ENDPOINT
+        SOURCE: $SOURCE
+        DEST: $DEST
+        USER_NAME: $USER_NAME
+        PORT: $PORT
     working_directory: ~/repo
     steps:
       - run:
