--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,6 @@ jobs:
   build:
     docker:
       - image: circleci/node:7.10
-      environment:
-        WP_API_ENDPOINT: $WP_API_ENDPOINT
-        ACF_API_ENDPOINT: $ACF_API_ENDPOINT
-        CONTACT_ENDPOINT: $CONTACT_ENDPOINT
-        SOURCE: $SOURCE
-        DEST: $DEST
-        USER_NAME: $USER_NAME
-        PORT: $PORT
     working_directory: ~/repo
     steps:
       - run:
@@ -33,5 +25,14 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: yarn test
-      - run: yarn run build
+      - run:
+        command: yarn run build
+        environment:
+          WP_API_ENDPOINT: $WP_API_ENDPOINT
+          ACF_API_ENDPOINT: $ACF_API_ENDPOINT
+          CONTACT_ENDPOINT: $CONTACT_ENDPOINT
+          SOURCE: $SOURCE
+          DEST: $DEST
+          USER_NAME: $USER_NAME
+          PORT: $PORT
       - run: yarn run deploy
