--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,11 @@ jobs:
       - run:
           command: yarn run build
           environment:
-            WP_API_ENDPOINT: $WP_API_ENDPOINT
-            ACF_API_ENDPOINT: $ACF_API_ENDPOINT
-            CONTACT_ENDPOINT: $CONTACT_ENDPOINT
-            SOURCE: $SOURCE
-            DEST: $DEST
-            USER_NAME: $USER_NAME
-            PORT: $PORT
+            WP_API_ENDPOINT: ${WP_API_ENDPOINT}
+            ACF_API_ENDPOINT: ${ACF_API_ENDPOINT}
+            CONTACT_ENDPOINT: ${CONTACT_ENDPOINT}
+            SOURCE: ${SOURCE}
+            DEST: ${DEST}
+            USER_NAME: ${USER_NAME}
+            PORT: ${PORT}
       - run: yarn run deploy
