--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           command: yarn run build
           environment:
-            WP_API_ENDPOINT: ${WP_API_ENDPOINT}
+            WP_API_ENDPOINT: hogehoge
             ACF_API_ENDPOINT: ${ACF_API_ENDPOINT}
             CONTACT_ENDPOINT: ${CONTACT_ENDPOINT}
             SOURCE: ${SOURCE}
