--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "dotenv-webpack": "^1.5.4",
     "eslint": "^4.11.0",
     "file-loader": "^0.11.2",
+    "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^21.2.1",
