--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,25 @@ jobs:
       - run:
           command: yarn run build
       - run: yarn run deploy
+
+  deploy:
+    docker:
+      - image: circleci/node:7.10
+    working_directory: ~/repo
+    steps:
+
+      - run:
+        name: deploy hugo
+        command: yarn run deploy
+
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
