--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,12 @@ jobs:
 
 workflows:
   version: 2
+  build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              ignore: master
   build_and_deploy:
     jobs:
       - build
