--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.1.0",
   "author": "Shanord Inc.",
   "dependencies": {
+    "@types/promise": "^7.1.30",
     "axios": "^0.16.2",
     "date-fns": "^2.0.0-alpha.7",
     "gsap": "^1.20.3",
     "history": "^4.6.3",
     "lodash.union": "^4.6.0",
     "normalizr": "^3.2.4",
+    "promise": "^8.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-addons-css-transition-group": "^15.6.2",
@@ -33,6 +35,7 @@
     "@storybook/addon-info": "^3.2.0",
     "@storybook/addon-knobs": "^3.2.0",
     "@storybook/react": "^3.2.0",
+    "@types/es6-promise": "^3.3.0",
     "@types/gsap": "^1.19.1",
     "@types/jest": "^21.1.6",
     "@types/lodash.union": "^4.6.3",
