--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "outDir": "./build/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "lib": ["dom", "ES2017"],
-    "module": "ES2015",
+    "lib": ["dom", "es2017"],
+    "module": "es2015",
     "moduleResolution": "node",
     "target": "es5",
     "jsx": "react",
